# nlw-22-computer-vision

./: .dockerignore  .gitignore  Dockerfile  LeNet5.ipynb  README.md  render.yaml
computer_vision_app/: README.md  app.py  pyproject.toml
computer_vision_app/assets/: style.css
computer_vision_app/core/: processor.py  webcam_recog.py
lenet/: LeNet5.ipynb  README.md
recog_system/: README.md  final_rebuild.py  gemini_vision.ipynb  mediapipe_webcam.ipynb  mobilenet_classification.ipynb  pyproject.toml  record_gestures.py  record_hand_landmarks.py  run_vision.py  segmentation_clipseg.ipynb  test_custom_model.py  train_gesture_model.py  train_gestures.py  webcam_recog.py  yolos_detection.ipynb
